--- a/prepros.config
+++ b/prepros.config
@@ -940,6 +940,26 @@
         }
       },
       {
+        "file": "css/style01.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "css/test.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "js/main.js",
         "config": {
           "tasks": {
